[project]
dependencies = [
  # list all runtime dependencies here
]
description = "Example Python repo for neutrons"
dynamic = ["version"]
license = {text = "LGPL-3.0"}
name = "examplepyapp"
requires-python = ">=3.10"

[project.urls]
homepage = "https://github.com/neutrons/python_project_template/" # if no homepage, use repo url

[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools >= 40.6.0",
  "wheel",
  "toml",
  "versioningit",
]

[tool.black]
line-length = 119

[tool.versioningit.vcs]
default-tag = "0.0.1"
method = "git"

[tool.versioningit.next-version]
method = "minor"

[tool.versioningit.format]
dirty = "{version}+d{build_date:%Y%m%d}"
distance = "{next_version}.dev{distance}"
distance-dirty = "{next_version}.dev{distance}+d{build_date:%Y%m%d%H%M}"

[tool.versioningit.write]
file = "src/packagenamepy/_version.py"

[tool.setuptools.packages.find]
exclude = ["tests*", "scripts*", "docs*", "notebooks*"]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.yml", "*.yaml", "*.ini"]

[project.scripts]
packagename-cli = "packagenamepy.packagename:main"

[project.gui-scripts]
packagenamepy = "packagenamepy.packagename:gui"

[tool.pytest.ini_options]
markers = [
  "mymarker: example markers goes here",
]
norecursedirs = [".git", "tmp*", "_tmp*", "__pycache__", "*dataset*", "*data_set*"]
python_files = ["test*.py"]
pythonpath = [
  ".",
  "src",
  "scripts",
]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
select = ["A", "ARG", "ASYNC", "BLE", "C90", "E", "F", "I", "N", "UP032", "W"]
# Add additional 3rd party tool configuration here as needed
