[project]
authors = [{name = "Bing Li", email = "lib1@ornl.gov"}]
dependencies = [
  # list all runtime dependencies here
]
description = "Triple-Axis Data Visualization Toolkit"
dynamic = ["version"]
license = "LGPL-3.0-or-later"
name = "neutron-tavi"
requires-python = ">=3.10"

[project.urls]
homepage = "https://github.com/neutrons/TAVI"

[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools >= 40.6.0",
  "wheel",
  "toml",
  "versioningit",
]

[tool.versioningit.vcs]
default-tag = "0.1.2"
method = "git"

[tool.versioningit.next-version]
method = "minor"

[tool.versioningit.format]
dirty = "{version}" #+d{build_date:%Y%m%d}"
distance = "{next_version}.dev{distance}" 
distance-dirty = "{next_version}.dev{distance}+d{build_date:%Y%m%d%H%M}" 

[tool.versioningit.write]
file = "src/tavi/_version.py"

[tool.setuptools.packages.find]
exclude = ["tests*", "scripts*", "docs*", "notebooks*"]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.yml", "*.yaml", "*.ini"]

# [project.scripts]
# packagename-cli = "packagenamepy.packagename:main"

# [project.gui-scripts]
# packagenamepy = "packagenamepy.packagename:gui"

[tool.pytest.ini_options]
markers = [
  "mymarker: example markers goes here",
]
norecursedirs = [".git", "tmp*", "_tmp*", "__pycache__", "*dataset*", "*data_set*"]
python_files = ["test*.py"]
pythonpath = [
  ".",
  "src",
  "scripts",
]
testpaths = ["tests"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = ["F841", "E741", "ARG001", "ARG002", "F821", "N802", "N806", "A002", "A001", "N803", "C901", "F841", "E501"]
select = ["A", "ARG", "ASYNC", "BLE", "C90", "E", "F", "I", "N", "UP032", "W"]
# Add additional 3rd party tool configuration here as needed
