[project]
name = "tavi"
description = "Triple-Axis Data Visualization Toolkit"
dynamic = ["version"]
requires-python = ">=3.10"
dependencies = [
  # Dependencies available from both PyPI and conda should be listed here
]
license = { text = "MIT" }
keywords = ["neutrons", "tas", "triple-axis"]
readme = "README.md"

[project.urls]
homepage = "https://github.com/neutrons/TAVI"
repository = "https://github.com/neutrons/tavi"
# documentation = add_url_to_readthedoc_here
issues = "https://github.com/neutrons/tavi/issues"

[build-system]
requires = [
  "hatchling",
  "versioningit"
]
build-backend = "hatchling.build"

[project.gui-scripts]
tavi = "tavi.tavimain:gui"

[project.scripts]
tavi = "tavi.tavimain:gui"

[tool.hatch.version]
source = "versioningit"

[tool.hatch.build]
artifacts = ["*.yml", "*.yaml", "*.json"]

[tool.hatch.build.hooks.versioningit-onbuild]
source-file = "src/tavi/_version.py"
build-file = "tavi/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/tavi"]

[tool.versioningit.write]
file = "src/tavi/_version.py"

[tool.versioningit.vcs]
method = "git"
default-tag = "4.0.0"

[tool.versioningit.next-version]
method = "minor"

[tool.versioningit.format]
distance = "{next_version}.dev{distance}"
dirty = "{version}"
distance-dirty = "{next_version}.dev{distance}"

[tool.pytest.ini_options]
pythonpath = [
  ".", "src", "scripts"
]
testpaths = ["tests"]
python_files = ["test*.py"]
norecursedirs = [".git", "tmp*", "_tmp*", "__pycache__", "*dataset*", "*data_set*"]
markers = [
    "mymarker: example markers goes here"
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = ["F841", "E741", "ARG001", "ARG002","ARG004", "F821","N801", "N802", "N806","N807", "A002", "A001", "N803", "C901", "F841", "E501"]
select = ["A", "ARG", "ASYNC", "BLE", "C90", "E", "F", "I", "N", "UP032", "W"]
# Add additional 3rd party tool configuration here as needed

# ------------------ #
# Pixi configuration #
# ------------------ #
[tool.pixi.workspace]
preview = ["pixi-build"] # Need this to access pixi-build feature
platforms = ["linux-64"]
channels = [
  "conda-forge",
  "https://prefix.dev/pixi-build-backends",
]

[tool.pixi.package]
name = "tavi"
version = "0.0.0" # placeholder, can be updated by task sync-version

[tool.pixi.package.build]
backend = { name = "pixi-build-python", version = "0.1.*" }

[tool.pixi.package.host-dependencies]
hatchling = "*"
versioningit = "*"

[tool.pixi.package.run-dependencies]
#dependencies for the conda package - for tavi to run
pyside6 = ">=6.8.1"
qtpy = ">=2.4.2"
numpy = ">=2.2.0"
scipy = ">=1.14.1"
matplotlib = ">=3.10.0"
pandas = ">=2.3.3"
numba = ">=0.62.1"
h5py = ">=3.15.1"
lmfit = ">=1.3.4"
jupyterlab = ">=4.4.10"
ipympl = ">=0.9.8"

[tool.pixi.dependencies]
# Conda package dependencies for the local environment though pixi
pyside6 = ">=6.8.1"
qtpy = ">=2.4.2"
numpy = ">=2.2.0"
scipy = ">=1.14.1"
matplotlib = ">=3.10.0"
pandas = ">=2.3.3"
numba = ">=0.62.1"
h5py = ">=3.15.1"
lmfit = ">=1.3.4"
jupyterlab = ">=4.4.10"
ipympl = ">=0.9.8"

[tool.pixi.pypi-dependencies]
# PyPI dependencies for the local environment though pixi
#including this package to allow local editable installs
tavi = { path = ".", editable = true }

[tool.pixi.environments]
#environment definitions with feature dependencies
default = { features = ["package", "developer","docs","test",], solve-group = "default" }

[tool.pixi.feature.package.dependencies]
#conda package
anaconda-client = ">=1.13.0"
check-wheel-contents = ">=0.6.2"
versioningit = ">=3.2.0"
#python package
pip = "*"

[tool.pixi.feature.package.pypi-dependencies]
toml-cli = "*"

#code analysis tools
[tool.pixi.feature.developer.dependencies]
pip = ">=25.1.1"
pip-audit = ">=2.9.0"
pre-commit = ">=4.2.0"
codecov = ">=2.1.13"

#readthedocs
[tool.pixi.feature.docs.dependencies]
sphinx = ">=8"
sphinx_rtd_theme = ">=3.0.1"
sphinxcontrib-mermaid = ">=1.0.0"

#pytest
[tool.pixi.feature.test.dependencies]
pytest = ">=9.0.0"
pytest-qt = ">=4.4.0"
pytest-cov = ">=7.0.0"
pytest-mock = ">=3.14.1"
pytest-xvfb = ">=3.1.1"

[tool.pixi.tasks]
# Documentation
build-docs = { cmd = 'sphinx-build -b html docs/source/ docs/_build/html', description = "Build documentation" }
test-docs = { cmd = "sphinx-build -M doctest docs/source/ docs/_build/html", description = "Test building the documentation" }
# Testing
test = { description = "Run the test suite", cmd = "pytest" }
# Packaging
conda-build-command = { cmd = "pixi build", description = "Wrapper for building the conda package - used by `conda-build`" }
conda-build = { description = "Build the conda package", depends-on = [
    "sync-version",
    "conda-build-command",
    "reset-version",
] }
conda-publish = { cmd = "anaconda upload *.conda", description = "Publish the .conda package to anaconda.org", depends-on = [
    "conda-build",
] }
# Misc
audit-deps = { cmd = "pip-audit --local -s osv", description = "Audit the package dependencies for vulnerabilities" }
clean = { cmd = 'rm -rf .pytest_cache .ruff_cache **/*.egg-info **/dist **/__pycache__ **/_version.py', description = "Clean up various caches and build artifacts" }
clean-conda = { cmd = "rm -f *.conda", description = "Clean the local .conda build artifacts" }
clean-docs = { cmd = "rm -rf docs/_build", description = "Clean up documentation build artifacts" }
clean-all = { description = "Clean all artifacts", depends-on = [
    "clean",
    "clean-conda",
    "clean-docs",
] }
sync-version = { cmd = 'version=$(python -m versioningit); toml set tool.pixi.package.version "$version" --toml-path pyproject.toml', description = "Sync pyproject.toml version with Git version" }
reset-version = { cmd = "toml set tool.pixi.package.version \"0.0.0\" --toml-path pyproject.toml", description = "Reset the package version to 0.0.0" }
